--- a/src/app/admin/add-edit-account/add-edit-account.component.html
+++ b/src/app/admin/add-edit-account/add-edit-account.component.html
@@ -20,7 +20,7 @@
                 <input formControlName="expense" matInput placeholder="Expense">
             </mat-form-field><br>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" id="remark">
                 <mat-label>Remarks</mat-label>
                 <input formControlName="remarks" matInput placeholder="Remarks">
             </mat-form-field><br>
