--- a/src/app/admin/party/party.component.html
+++ b/src/app/admin/party/party.component.html
@@ -1,3 +1,4 @@
+<div id="wrapper">
 <div class="view_notice">
   <span class="notice_text">Manage Party</span>
   <mat-icon id="add_party" (click)="add_party()">add_circle</mat-icon>
@@ -49,4 +50,5 @@
         <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
       </div>    
     </form>
+  </div>
   </div>
