--- a/src/app/admin/account/account.component.css
+++ b/src/app/admin/account/account.component.css
@@ -1,3 +1,6 @@
+#wrapper{
+    margin-top: 63px;
+}
 .view_notice {
     height: 40px;
     width: 100%;
@@ -91,12 +94,14 @@ ng-container {
 .data:hover {
     color: white;
 }
+
 @media (max-width: 700px) {
-    .trth{
+    .trth {
         width: 100%;
-        
+
     }
-    .data{
+
+    .data {
         width: 100%;
     }
 }
