--- a/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
+++ b/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.css
@@ -1,35 +1,39 @@
-  .reset_btn{
-    margin-right: 30px; 
-}
-.add_btn{
-    margin-right:20px;
-    background-color: green;
-    color: whitesmoke;
-}
-.example-spacer {
-    flex: 1 5 auto;
-    
-}
+  .reset_btn {
+      margin-right: 30px;
+  }
+
+  .add_btn {
+      margin-right: 20px;
+      background-color: green;
+      color: whitesmoke;
+  }
+
+  .example-spacer {
+      flex: 1 1 auto;
+      margin-bottom: 20px;
+      color: rgb(20, 89, 92);
+      font-size: 18px;
+  }
+
+  .material-icons {
+      color: rgb(20, 89, 92);
+      margin-bottom: 20px;
+  }
 
 
-textarea{
-    height: 18px;
-      
- }
- .date{
-    width: 200px;
-}
+  textarea {
+      height: 18px;
 
-mat-toolbar{
-    height:49px;
-    margin-bottom:-20px;
-    padding: 0px;
-    background: none;
-    position: relative;
-    top:-25px;
-    color:whitesmoke;
-    background-color:#14595c; ;
-}
+  }
 
+  .date {
+      width: 200px;
+  }
 
- 
+  mat-toolbar {
+      height: 49px;
+      padding: 0px;
+      background: none;
+      position: relative;
+      color: whitesmoke;
+  }
