--- a/src/app/admin/add-edit-area/add-edit-area.component.css
+++ b/src/app/admin/add-edit-area/add-edit-area.component.css
@@ -1,18 +1,30 @@
-.reset_btn{
-    margin-right: 30px; 
+.reset_btn {
+    margin-right: 30px;
 }
-.add_btn{
-    margin-right:20px;
+
+.add_btn {
+    margin-right: 20px;
     background-color: green;
     color: whitesmoke;
 }
+
 .example-spacer {
     flex: 1 1 auto;
+    margin-bottom: 20px;
+    color: rgb(20, 89, 92);
+    font-size: 18px;
 }
-textarea{
+
+.material-icons {
+    color: rgb(20, 89, 92);
+    margin-bottom: 20px;
+}
+
+textarea {
     height: 18px;
-      
- } 
+
+}
+
 /* mat-toolbar{
     height:40px;
     margin-bottom: 15px;
@@ -23,16 +35,10 @@ textarea{
     color:whitesmoke;
     background-color:#14595c; 
 } */
-mat-toolbar{
-    height:40px;
-    margin-bottom:-25px;      
-    padding:10px;
+mat-toolbar {
+    height: 40px;
+    padding: 0px;
     background: none;
-    position:relative;  
-    top:-25px;
-    color:whitesmoke;
-    background-color:#14595c; 
+    position: relative;
+    color: whitesmoke;
 }
-
-
-
