--- a/src/app/admin/add-edit-category/add-edit-category.component.css
+++ b/src/app/admin/add-edit-category/add-edit-category.component.css
@@ -1,31 +1,34 @@
-.reset_btn{
-    margin-right: 30px; 
+.reset_btn {
+    margin-right: 30px;
 }
-.add_btn{
-    margin-right:20px;
+
+.add_btn {
+    margin-right: 20px;
     background-color: green;
     color: whitesmoke;
 }
+
 .example-spacer {
     flex: 1 1 auto;
-    color: rgb(20,89,92);
+    color: rgb(20, 89, 92);
     margin-bottom: 20px;
     font-size: 18px;
 }
-   
-.material-icons{
-    color: rgb(20,89,92);
+
+.material-icons {
+    color: rgb(20, 89, 92);
     margin-bottom: 20px;
 }
-textarea{
+
+textarea {
     height: 18px;
- } 
-mat-toolbar{
+}
+
+mat-toolbar {
     height: 40px;
     margin-bottom: -20px;
     padding: 0px;
     background: none;
     position: relative;
-    color:whitesmoke;
+    color: whitesmoke;
 }
-
