--- a/src/app/admin/add-edit-gst/add-edit-gst.component.css
+++ b/src/app/admin/add-edit-gst/add-edit-gst.component.css
@@ -1,33 +1,34 @@
-.reset_btn{
-    margin-right: 30px; 
+.reset_btn {
+    margin-right: 30px;
 }
-.add_btn{
-    margin-right:20px;
+
+.add_btn {
+    margin-right: 20px;
     background-color: green;
     color: whitesmoke;
 }
+
 .example-spacer {
     flex: 1 1 auto;
     margin-bottom: 20px;
-    color: rgb(20,89,92);
+    color: rgb(20, 89, 92);
     font-size: 18px;
 }
-.material-icons{
-        color: rgb(20,89,92);
-        margin-bottom: 20px;
+
+.material-icons {
+    color: rgb(20, 89, 92);
+    margin-bottom: 20px;
 }
 
-textarea{
+textarea {
     height: 18px;
-      
- } 
- mat-toolbar {
+
+}
+
+mat-toolbar {
     height: 40px;
-    /* margin-bottom:20px ; */
     background: none;
     color: #f4f8f8;
     padding: 0px;
     position: relative;
-    /* background-color:#14595c; */
-  }
-
+}
