--- a/src/app/admin/add-edit-weight/add-edit-weight.component.css
+++ b/src/app/admin/add-edit-weight/add-edit-weight.component.css
@@ -10,12 +10,13 @@
 
 .example-spacer {
     flex: 1 1 auto;
-    color: rgb(20,89,92);
+    color: rgb(20, 89, 92);
     margin-bottom: 20px;
     font-size: 18px;
 }
-.material-icons{
-    color: rgb(20,89,92);
+
+.material-icons {
+    color: rgb(20, 89, 92);
     margin-bottom: 20px;
 }
 
@@ -26,11 +27,8 @@ textarea {
 
 mat-toolbar {
     height: 40px;
-    /* margin-bottom: 20px; */
     background: none;
     color: #f4f8f8;
     padding: 0px;
     position: relative;
-    /* top: -25px; */
-    /* background-color: #14595c; */
 }
