--- a/src/app/admin/area-allocate/area-allocate.component.css
+++ b/src/app/admin/area-allocate/area-allocate.component.css
@@ -1,4 +1,7 @@
-.view_notice{
+#wrapper{
+    margin-top: 63px;
+}
+.view_notice {
     height: 40px;
     width: 100%;
     background-color: #0b4648;
@@ -8,16 +11,19 @@
     padding: 10px;
     box-sizing: border-box;
 }
-#add_area_allocate{
+
+#add_area_allocate {
     position: relative;
     top: -5px;
     left: 2px;
     cursor: pointer;
 }
-.notice_text{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+.notice_text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.count_search{
+
+.count_search {
     height: 40px;
     width: 100%;
     display: flex;
@@ -26,7 +32,8 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
-.search input{   
+
+.search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
     padding: 5px;
@@ -35,51 +42,55 @@
     top: -5px;
     left: 0px;
 }
-mat-icon{
+
+mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
     line-height: 30px;
 }
 
-#table{
+#table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
-  }
-  .trth{
-      color: white;
-      background-color:  #0f575a;
-      height: 40px;
-      font-weight: bold;
-  }
-  tr:nth-child(even){
-      background-color: whitesmoke;
-      height: 35px;
-  }
-  tr:nth-child(odd){   
-      height: 35px;
-  }
-  tr:hover{
-      background-color: #0f575a;
-      color: aliceblue;
-      cursor: pointer;
-  }
-  ng-container{
-      text-align: center;
-  }
-  .cotainer{
-      margin-top: 5px;
-  }
-  .mat-form-field {
-      font-size: 18px;
-      width: 100%;
-  }
-  .data:hover{
-      color:white ;
-  }
-  
-    
-  
-  
-  
+}
+
+.trth {
+    color: white;
+    background-color: #0f575a;
+    height: 40px;
+    font-weight: bold;
+}
+
+tr:nth-child(even) {
+    background-color: whitesmoke;
+    height: 35px;
+}
+
+tr:nth-child(odd) {
+    height: 35px;
+}
+
+tr:hover {
+    background-color: #0f575a;
+    color: aliceblue;
+    cursor: pointer;
+}
+
+ng-container {
+    text-align: center;
+}
+
+.cotainer {
+    margin-top: 5px;
+}
+
+.mat-form-field {
+    font-size: 18px;
+    width: 100%;
+}
+
+.data:hover {
+    color: white;
+}
