--- a/src/app/admin/area/area.component.css
+++ b/src/app/admin/area/area.component.css
@@ -1,3 +1,6 @@
+#wrapper{
+    margin-top: 63px;
+}
 .view_notice {
     height: 40px;
     width: 100%;
@@ -8,15 +11,18 @@
     padding: 10px;
     box-sizing: border-box;
 }
+
 #add_area {
     position: relative;
     top: -5px;
     left: 2px;
     cursor: pointer;
 }
+
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 .count_search {
     height: 40px;
     width: 100%;
@@ -26,6 +32,7 @@
     box-sizing: border-box;
     color: #0d5e58;
 }
+
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
@@ -35,23 +42,27 @@
     top: -5px;
     left: 0px;
 }
+
 mat-icon {
     background-color: transparent;
     border: none;
     font-size: 20px;
     line-height: 30px;
 }
+
 #table {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
+
 .trth {
     color: white;
     background-color: #0f575a;
     height: 40px;
     font-weight: bold;
 }
+
 tr:nth-child(even) {
     background-color: whitesmoke;
     height: 35px;
@@ -60,6 +71,7 @@ tr:nth-child(even) {
 tr:nth-child(odd) {
     height: 35px;
 }
+
 tr:hover {
     background-color: #0f575a;
     color: aliceblue;
