--- a/src/app/admin/expiry-report/expiry-report.component.html
+++ b/src/app/admin/expiry-report/expiry-report.component.html
@@ -1,4 +1,5 @@
-<div class="view_notice">
+<div id="wrapper">
+  <div class="view_notice">
     <span class="notice_text">Expiry Report</span>
     <mat-icon id="print_expiry_report" (click)="print_expiry_report()">local_printshop</mat-icon>
   </div>
@@ -17,17 +18,17 @@
             <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
               paginatorRef.pageSize)+(i+1)}}</td>
           </ng-container>
-  
+
           <ng-container matColumnDef="exp_Product">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.exp_Product}}</td>
           </ng-container>
-          
+
           <ng-container matColumnDef="exp_category">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.exp_category}}</td>
           </ng-container>
-  
+
           <ng-container matColumnDef="exp_campany_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Company name </th>
             <td class="data" mat-cell *matCellDef="let row">{{row.exp_campany_name}}</td>
@@ -41,15 +42,17 @@
           <ng-container matColumnDef="exp_remaining_days">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Remaining Days</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.exp_remaining_days}}</td>
-          </ng-container>  
-  
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
           </tr>
         </table>
-        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
+          aria-label="Select page of users"></mat-paginator>
       </div>
     </form>
   </div>
+</div>
