--- a/src/app/admin/item/item.component.html
+++ b/src/app/admin/item/item.component.html
@@ -1,5 +1,6 @@
-<div class="view_notice">
-    <span class="notice_text">Item  Details</span>
+<div id="wrapper">
+  <div class="view_notice">
+    <span class="notice_text">Item Details</span>
     <mat-icon id="add_item" (click)="add_item()">add_circle</mat-icon>
   </div>
   <div class="count_search">
@@ -11,52 +12,53 @@
   <div class="cotainer">
     <form>
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort id="table">    
+        <table mat-table [dataSource]="dataSource" matSort id="table">
           <ng-container matColumnDef="slno">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
-            <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
-          </ng-container>    
+            <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
+              paginatorRef.pageSize)+(i+1)}}</td>
+          </ng-container>
           <ng-container matColumnDef="item_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.item_name}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.item_name}}</td>
           </ng-container>
           <ng-container matColumnDef="cat_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.cat_name}}</td>
-          </ng-container> 
-          <ng-container matColumnDef="weight_name">                                                   
+          </ng-container>
+          <ng-container matColumnDef="weight_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.weight_name}}</td>                                                                                 
-          </ng-container>    
-          
+            <td class="data" mat-cell *matCellDef="let row">{{row.weight_name}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="item_rate">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.item_rate}}</td>
-          </ng-container> 
-          
+            <td class="data" mat-cell *matCellDef="let row">{{row.item_rate}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="size_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Size</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.size_name}}</td>
-          </ng-container> 
-           
+            <td class="data" mat-cell *matCellDef="let row">{{row.size_name}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="unit_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.unit_name}}</td>
-          </ng-container>  
-         
+            <td class="data" mat-cell *matCellDef="let row">{{row.unit_name}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editItem(row)">edit</mat-icon></td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
           </tr>
-        </table>    
-        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-      </div>    
+        </table>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
+          aria-label="Select page of users"></mat-paginator>
+      </div>
     </form>
   </div>
-
-
+</div>
