--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -1,11 +1,12 @@
 .top {
     width: 100%;
     height: 62px; 
-    /* z-index: 9; */
-    /* background-color: rgb(20,89,92);   */
+    z-index: 9;
+    background-color: rgb(20,89,92);  
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.5); 
     /* position: fixed; */
-    /* top: 0px; */
+    position: sticky;
+    top: 0px;
 
 } 
 .title_text {
