--- a/src/app/admin/stock-report/stock-report.component.html
+++ b/src/app/admin/stock-report/stock-report.component.html
@@ -1,5 +1,6 @@
-<div class="view_notice">
-    <span class="notice_text">Stock  Report</span>
+<div id="wrapper">
+  <div class="view_notice">
+    <span class="notice_text">Stock Report</span>
     <mat-icon id="print_stock_report" (click)="print_stock_report()">local_printshop</mat-icon>
   </div>
   <div class="count_search">
@@ -17,26 +18,26 @@
             <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex *
               paginatorRef.pageSize)+(i+1)}}</td>
           </ng-container>
-  
+
           <ng-container matColumnDef="category">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Category </th>
             <td class="data" mat-cell *matCellDef="let row">{{row.category}}</td>
           </ng-container>
-          
+
           <ng-container matColumnDef="product">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.product}}</td>
           </ng-container>
-  
+
           <ng-container matColumnDef="company_name">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Company name </th>
             <td class="data" mat-cell *matCellDef="let row">{{row.company_name}}</td>
-          </ng-container> 
+          </ng-container>
 
           <ng-container matColumnDef="purchase_qty">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Purchase Qty.</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.purchase_qty}}</td>
-          </ng-container> 
+          </ng-container>
 
           <ng-container matColumnDef="sale_qty">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Sale Qty.</th>
@@ -46,22 +47,20 @@
           <ng-container matColumnDef="available_qty">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Available Qty.</th>
             <td class="data" mat-cell *matCellDef="let row">{{row.available_qty}}</td>
-          </ng-container>                
-  
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
           </tr>
         </table>
-        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
+          aria-label="Select page of users"></mat-paginator>
       </div>
     </form>
   </div>
   <div class="footer_amount">
-  <span>Total purchase product : 0  | Total Sale Product : 0</span> 
+    <span>Total purchase product : 0 | Total Sale Product : 0</span>
   </div>
-
-
-
-
+</div>
