--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,11 @@ mat-sidenav-content{
 mat-toolbar{
   background-color:#14595c;
   justify-content: space-between;  
- height: 62px; 
+  height: 62px; 
+  position: fixed;
+  top: 0px;
+  z-index: 10;
+  
 }
 mat-icon{
   color: whitesmoke;
@@ -24,13 +28,17 @@ mat-icon{
   font-size: 18px;
   color: whitesmoke;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
+  position: fixed;
+  right: 45px;
+  top: 16px;
+  /* margin-right: 260px; */
 }
 .user-icon{
-  position: relative;
-  top: 7px;
-  
- 
+  /* position: relative; */
+  /* top: 7px; */
+  position: fixed;
+  right: 16px;
+  top: 20px;
 }
 table {
   width: 100%;
