--- a/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.html
+++ b/src/app/admin/add-edit-area-allocate/add-edit-area-allocate.component.html
@@ -8,25 +8,21 @@
             <input type="number" formControlName="alct_area_id" readonly hidden>           
             <mat-form-field appearance="fill">
                 <mat-label>Employee Name</mat-label>
-                <mat-select formControlName="alct_area_emp_id_fk">
-                    <mat-option *ngFor="let empdata of empdata" [value]="empdata.emp_id">{{empdata.emp_name}}</mat-option>
+                <mat-select formControlName="emp_id_fk">
+                    <mat-option *ngFor="let empdata of empdata" [value]="empdata.emp_id">{{empdata.emp_name }}</mat-option>                                    
                 </mat-select>
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
                 <mat-label>Area</mat-label>
-                <mat-select formControlName="alct_area_name_id_fk">
+                <mat-select formControlName="area_id_fk">
                     <mat-option *ngFor="let areadata of areadata" [value]="areadata.area_id">{{areadata.area_name}}</mat-option>
                 </mat-select>
             </mat-form-field><br>                    
 
-            <mat-form-field appearance="fill" class="date">
-                <mat-label>Choose a date</mat-label>
-                <input formControlName="alct_area_date" matInput [matDatepicker]="picker">
-                <mat-datepicker-toggle matSuffix [for]="picker">
-                    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                </mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+            <mat-form-field appearance="fill">
+                <mat-label>Date</mat-label>
+                <input  formControlName="alct_area_date" matInput placeholder="Discription" type="date">
             </mat-form-field><br>
 
             <mat-form-field appearance="fill">
