--- a/src/app/admin/add-edit-expense/add-edit-expense.component.css
+++ b/src/app/admin/add-edit-expense/add-edit-expense.component.css
@@ -12,7 +12,8 @@
     height: 40px;
     -moz-box-align: center;
     float: left;
-    margin-top: 10px;    
+    margin-top: 10px; 
+    margin-left: 13px;  
   }
   .add_btn {
     width: 80px;
