--- a/src/app/admin/dashboard/dashboard.component.css
+++ b/src/app/admin/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .main_thumbnail {
-  padding-right: 20px;
+  padding-right: 12px;
   padding-top: 61px;
 }
 
@@ -11,7 +11,7 @@
   border-radius: 5px;
   float: left;
   margin-top: 20px;
-  margin-left: 20px;
+  margin-left: 18px;
 }
 
 
@@ -95,12 +95,11 @@ mat-icon {
   }
 
   .thumbnail {
-    width: 43%;
+    width: 45%;
     height: 100px;
     float: left;
-    margin-top: 5%;
-    margin-left: 4.4%;
-
+    margin-top: 20px ;
+    /* margin-right: 0px; */
   }
 
   .thumbnail span {
@@ -127,8 +126,8 @@ mat-icon {
     width: 90%;
     height: 100px;
     float: left;
-    margin: 4% 4% 0% 4%;
-
+    margin: 5% 0% 0% 5%;
+   
   }
 
   .thumbnail span {
@@ -138,23 +137,26 @@ mat-icon {
   }
 
   mat-icon {
-    width: 30px;
-    height: 30px;
-    font-size: 30px;
-    margin-top: 35px;
+    /* width: 30px; */
+    /* height: 30px; */
+    font-size: 28px;
+    /* margin-top: 35px; */
+    margin: 35px 0px 0px 0px;
+    
   }
 
 }
 
 @media(max-width:420px) {
   .main_thumbnail {
-    padding-right: 10px;
+    padding-right: 4px;
   }
 
   .thumbnail {
     width: 100%;
     height: 100px;
     margin-top: 10px;
+    /* float: left; */
     margin-left: 2px;
 
   }
