--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -26,7 +26,7 @@
     width: 100%;
     font-size: 16px;
     color: whitesmoke;
-    margin-top:7px;
+    /* margin-top:7px; */
     display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;     
     
@@ -69,7 +69,6 @@
   button:hover{
     padding-left: 25px;
   }
-
 
 /* ===========================================media Query================================================== */
 
