--- a/src/app/admin/purchase-report/purchase-report.component.css
+++ b/src/app/admin/purchase-report/purchase-report.component.css
@@ -1,6 +1,3 @@
-#wrapper{
-    margin-top: 63px;
-}
 .view_notice {
     height: 40px;
     width: 100%;
@@ -14,7 +11,6 @@
 
 #add_dues {
     position: relative;
-    top: -5px;
     left: 2px;
     cursor: pointer;
 }
@@ -26,20 +22,29 @@
 .count_search {
     height: 40px;
     width: 100%;
+    margin-top: 23px;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
     color: #0d5e58;
+   
 }
-
+.datetime{
+    height: 100%;
+    width: 150px;
+   
+}
+.example-full-width{
+    height: 300px;
+}
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
     padding: 5px;
     background-color: whitesmoke;
     position: relative;
-    top: -5px;
+    top: 2px;
     left: 0px;
 }
 
@@ -61,6 +66,7 @@ mat-icon {
     background-color: #0f575a;
     height: 40px;
     font-weight: bold;
+    padding-left: 38px;
 }
 
 tr:nth-child(even) {
